--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,12 @@
             <scope>test</scope>
         </dependency>
         
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
+       <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <scope>provided</scope>
+      </dependency>
+ 
         
         <!-- Spring Security -->
       <dependency>
